# dependency_analyzer

./: .gitignore  Cargo.toml  README.md
docs/: workflow.mmd
src/: main.rs
test_complex/: Pipfile  environment.yml  pyproject.toml  requirements.txt  setup.py
test_project/: requirements.txt
