[project]
name = "ml-project"
version = "0.1.0"
description = "A test ML project"
requires-python = ">=3.8,<3.10"
dependencies = [
    "numpy>=1.20.0",  # Different version
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "tensorflow>=2.5.0",  # Different version
    "torch>=1.9.0",    # Different version
    "transformers>=4.8.0",  # Higher version
    "jax>=0.2.5",     # Another version
    "datasets>=1.5.0", # Different version
    "tokenizers>=0.11.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.1",
    "pillow>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"
